(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

New Features:

  * util-core: Add `c.t.concurrent.Scheduler.blockingTimeNanos` which tracks time spent doing
    blocking operations. ``RB_ID=828289``

  * util-app: `com.twitter.finagle.util.LoadService` has been moved to
    `c.t.app.LoadService` and can now be used without needing a finagle-core
    dependency. ``RB_ID=829897``

API Changes:

   * Builds are now only for Java 8 and Scala 2.11. See the
     `blog post <https://finagle.github.io/blog/2016/04/20/scala-210-and-java7/>`_
     for details. ``RB_ID=828898``

6.34.0  2016-04-26

New Features:

  * util-core: Add `Throwables.unchecked` to help Java users deal with checked
    exceptions. ``RB_ID=811441``

  * util-stats: Can now get from a `com.twitter.finagle.stats.StatsReceiver`` to all "leaf"
    StatsReceivers that don't delegate to another StatsReceiver with
    `com.twitter.finagle.stats.DelegatingStatsReceiver.all`.  ``RB_ID=819519``

API Changes:

  * util-core: Removed deprecated methods from Buf.scala ``RB_ID=809948``
    - Removed `c.t.io.Buf.ByteArray.apply`, replace usage with `Buf.ByteArray.Owned.apply`.
    - Removed `c.t.io.Buf.ByteArray.unapply`, replace usage with `Buf.ByteArray.Owned.unapply`.
    - Removed `c.t.io.Buf.ByteBuffer.apply`, replace usage with `Buf.ByteBuffer.Owned.apply`.
    - Removed `c.t.io.Buf.toByteBuffer`, replace usage with `Buf.ByteBuffer.Owned.extract`.

  * util-core: Removed deprecated `Future.apply` methods ``RB_ID=811617``

  * util-stats: Removed `com.twitter.finagle.stats.BroadcastStatsReceiver` marker trait in favor of
    `com.twiter.finagle.stats.DelegatingStatsReceiver` marker trait, which lets us specify that we
    only delegate to a single `com.twitter.finagle.stats.StatsReceiver`.  ``RB_ID=819519``
