@@ -11,6 +11,9 @@ New Features:
   * util-core: Add `c.t.concurrent.Scheduler.blockingTimeNanos` which tracks time spent doing
     blocking operations. ``RB_ID=828289``
 
+  * util-core: Reduced allocations by 40% and latency by 18% of satisfying `Promises`.
+    ``RB_ID=832816``
+
   * util-app: `com.twitter.finagle.util.LoadService` has been moved to
     `c.t.app.LoadService` and can now be used without needing a finagle-core
     dependency. ``RB_ID=829897``
